--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           </label>
           <label>
             Message
-            <textarea placeholder="in a bottle"></textarea>
+            <textarea placeholder="in a bottle" name="message"></textarea>
           </label>
           <button class="button expanded" type="submit">Send it</button>
         </form>
