added some photos and descriptions

--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
 
 <body>
 
-  <div class="top-bar" id="top">
-    <div class="top-bar-left">
+  <div class="top-bar " id="top">
+    <div class="top-bar-left ">
       <ul class="menu">
         <li class="menu-text">Andrew Esquivel</li>
-        <li></i><a href="https://www.linkedin.com/in/andrewesquivel/">
-            <i class="fi-social-linkedin"></i>linkedin</a></li>
-        <li><a href="https://github.com/theAndes">
-            <i class="fi-social-github"></i>github</a></li>
+
       </ul>
     </div>
     <div class="top-bar-right">
-      <ul class="menu " >
+      <ul class="menu ">
+        <li><a href="https://www.linkedin.com/in/andrewesquivel/">
+            <i class="fi-social-linkedin"></i>linkedin</a></li>
+        <li><a href="https://github.com/theAndes">
+            <i class="fi-social-github"></i>github</a></li>
         <li><a href="#teamwork">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#">Resume</a></li>
+        <!-- <li><a href="#">Resume</a></li> -->
       </ul>
     </div>
   </div>
@@ -51,7 +52,7 @@
   <div class="callout large">
     <div class="row column text-center">
       <h1>Changing the World Through Design</h1>
-      <p class="lead">Full Stack Developer &lt; Data Analyst &lt; Navy Veteran</p>
+      <p class="lead"> Data Analyst > <b>Full Stack Developer </b> &lt; Navy Veteran</p>
     </div>
   </div>
   <div class="row">
@@ -70,19 +71,67 @@
   </div>
   <div class="row">
     <div class="medium-4 columns">
-      <h3>Full Stack Dev</h3>
+      <!-- <h3>Full Stack Dev</h3>
       <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu
-        diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+        diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p> -->
+      <div class="card-user-profile">
+        <img class="card-user-profile-img" src="./assets/images/maincampus_hero.jpg" alt="picture of space" />
+        <div class="card-user-profile-content card-section">
+          <div class="card-user-profile-avatar">
+            <img src="./assets/images/ut_crest.png" alt="picture of yeti" />
+          </div>
+          <p class="card-user-profile-name">Full Stack Development</p>
+          <p class="card-user-profile-status">:)</p>
+          <p class="card-user-profile-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint
+            placeat saepe, nam cum maxime illum obcaecati officiis cumque dignissimos earum veritatis vel labore
+            doloremque praesentium deserunt nisi vitae pariatur.</p>
+        </div>
+      </div>
+
+
+
     </div>
     <div class="medium-4 columns">
-      <h3>Semiconductor</h3>
+      <!-- <h3>Semiconductor</h3>
       <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu
-        diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+        diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p> -->
+      <div class="card-user-profile">
+        <img class="card-user-profile-img" src="./assets/images/Samsung2.jpg" alt="picture of space" />
+        <div class="card-user-profile-content card-section">
+          <div class="card-user-profile-avatar">
+            <img src="./assets/images/bgData.png" alt="picture of yeti" />
+          </div>
+          <p class="card-user-profile-name">Professional</p>
+          <p class="card-user-profile-status">Innovation Deptartment</p>
+          <p class="card-user-profile-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat nesciunt
+            eveniet eum tenetur dolor a minus aliquam facilis rem expedita, aliquid eaque, placeat pariatur fugit
+            suscipit consectetur? Voluptatibus, voluptates aspernatur!</p>
+        </div>
+      </div>
+
+
+
     </div>
     <div class="medium-4 columns">
-      <h3>U.S.N</h3>
+      <!-- <h3>U.S.N</h3>
       <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu
-        diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+        diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p> -->
+      <div class="card-user-profile">
+        <img class="card-user-profile-img" src="./assets/images/DDG101.jpg" alt="picture of space" />
+        <div class="card-user-profile-content card-section">
+          <div class="card-user-profile-avatar">
+            <img src="./assets/images/usn.png" alt="picture of yeti" />
+          </div>
+          <p class="card-user-profile-name">Computer Network Technician</p>
+          <p class="card-user-profile-status">AEGIS Combat Systems</p>
+          <p class="card-user-profile-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos iusto
+            molestiae veniam maiores, voluptas eos rem quae ducimus qui officia in sequi excepturi est quidem quibusdam
+            autem. Modi, minima mollitia.</p>
+        </div>
+      </div>
+
+
+
     </div>
   </div>
 
@@ -96,126 +145,127 @@
       <div class="thumbnail flip-card card">
         <div class="flip-card-inner">
           <div class="flip-card-inner-front" id="one">
-            <span>This is not your next adventure!</span>
+            <span>Find you GIF!</span>
           </div>
           <div class="flip-card-inner-back">
-            <h3 class="flip-card-inner-back-title">Visit Yetiland</h3>
-            <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-              doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
+            <h3 class="flip-card-inner-back-title">Visit Giphy-land</h3>
+            <p class="flip-card-inner-back-text">Using the GIPHY API to make a dynamic web page that populates with gifs
+              of your choice.It is calling the GIPHY API and uses JavaScript and jQuery to change
+              the HTML.</p>
           </div>
         </div>
       </div>
       <div class="float-right">
-        <a href="#" class="link button ">Check out the site</a>
-        <a href="#" class="link button ">Check out the code</a>
+        <a href="https://andrewesquivel.com/AJAX-API/" class="link button ">Check out the site</a>
+        <a href="https://github.com/theAndes/AJAX-API" class="link button ">Check out the code</a>
       </div>
     </div>
     <div class="column">
       <div class="thumbnail flip-card card">
         <div class="flip-card-inner">
           <div class="flip-card-inner-front" id="two">
-            <span>This is not your next adventure!</span>
+            <span>What word is it?</span>
           </div>
           <div class="flip-card-inner-back">
-            <h3 class="flip-card-inner-back-title">Visit Yetiland</h3>
-            <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-              doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
+            <h3 class="flip-card-inner-back-title">Visit the Dog</h3>
+            <p class="flip-card-inner-back-text">This utilizes JavaScript to randomize a list of words, and with key
+              events we capture user input to match guessed letters to the random word.</p>
           </div>
         </div>
       </div>
       <div class="float-right">
-        <a href="#" class="link button ">Check out the site</a>
-        <a href="#" class="link button ">Check out the code</a>
+        <a href="https://andrewesquivel.com/Word-Guess-Game/" class="link button ">Check out the site</a>
+        <a href="https://github.com/theAndes/Word-Guess-Game" class="link button ">Check out the code</a>
       </div>
     </div>
     <div class="column">
       <div class="thumbnail flip-card card">
         <div class="flip-card-inner">
           <div class="flip-card-inner-front" id="three">
-            <span>This is not your next adventure!</span>
+            <span>Need a Friend?</span>
           </div>
           <div class="flip-card-inner-back">
-            <h3 class="flip-card-inner-back-title">Visit Yetiland</h3>
-            <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-              doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
+            <h3 class="flip-card-inner-back-title">Visit Friend Finder</h3>
+            <p class="flip-card-inner-back-text">Spin up that server.We got some NodeJS running here along with
+              expressJS. Here we hook up Cleint to server with API awesom API routing.</p>
           </div>
         </div>
       </div>
       <div class="float-right">
-        <a href="#" class="link button ">Check out the site</a>
-        <a href="#" class="link button ">Check out the code</a>
+        <a href="https://friendfinder-0123456789.herokuapp.com/" class="link button ">Check out the site</a>
+        <a href="https://github.com/theAndes/FriendFinder" class="link button ">Check out the code</a>
       </div>
     </div>
     <div class="column">
       <div class="thumbnail flip-card card">
         <div class="flip-card-inner">
           <div class="flip-card-inner-front" id="four">
-            <span>This is not your next adventure!</span>
+            <span>Train Tracker!</span>
           </div>
           <div class="flip-card-inner-back">
-            <h3 class="flip-card-inner-back-title">Visit Yetiland</h3>
+            <h3 class="flip-card-inner-back-title">Where's my train?</h3>
             <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
               doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
           </div>
         </div>
       </div>
       <div class="float-right">
-        <a href="#" class="link button ">Check out the site</a>
-        <a href="#" class="link button ">Check out the code</a>
+        <a href="https://andrewesquivel.com/train/" class="link button ">Check out the site</a>
+        <a href="https://github.com/theAndes/train" class="link button ">Check out the code</a>
       </div>
     </div>
     <div class="column">
       <div class="thumbnail flip-card card">
         <div class="flip-card-inner">
           <div class="flip-card-inner-front" id="five">
-            <span>This is not your next adventure!</span>
+            <span>Trivia Game!</span>
           </div>
           <div class="flip-card-inner-back">
-            <h3 class="flip-card-inner-back-title">Visit Yetiland</h3>
+            <h3 class="flip-card-inner-back-title">Answer the questions</h3>
             <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
               doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
           </div>
         </div>
       </div>
       <div class="float-right">
-        <a href="#" class="link button ">Check out the site</a>
-        <a href="#" class="link button ">Check out the code</a>
+        <a href="https://andrewesquivel.com/triviaGame/" class="link button ">Check out the site</a>
+        <a href="https://github.com/theAndes/triviaGame" class="link button ">Check out the code</a>
       </div>
     </div>
     <div class="column">
       <div class="thumbnail flip-card card">
         <div class="flip-card-inner">
           <div class="flip-card-inner-front" id="six">
-            <span>This is not your next adventure!</span>
+            <span>RPG!</span>
           </div>
           <div class="flip-card-inner-back">
-            <h3 class="flip-card-inner-back-title">Visit Yetiland</h3>
+            <h3 class="flip-card-inner-back-title">PIKA</h3>
             <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
               doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
           </div>
         </div>
       </div>
       <div class="float-right">
-        <a href="#" class="link button ">Check out the site</a>
-        <a href="#" class="link button ">Check out the code</a>
+        <a href="https://andrewesquivel.com/unit-4-game/" class="link button ">Check out the site</a>
+        <a href="https://github.com/theAndes/unit-4-game" class="link button ">Check out the code</a>
       </div>
     </div>
     <div class="column">
       <div class="thumbnail flip-card card">
         <div class="flip-card-inner">
           <div class="flip-card-inner-front" id="seven">
-            <span>This is not your next adventure!</span>
+            <span>Medicine-Cabinet</span>
           </div>
           <div class="flip-card-inner-back">
-            <h3 class="flip-card-inner-back-title">Visit Yetiland</h3>
+            <h3 class="flip-card-inner-back-title">Meds</h3>
             <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
               doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
           </div>
         </div>
       </div>
       <div class="float-right">
-        <a href="#" class="link button ">Check out the site</a>
-        <a href="#" class="link button ">Check out the code</a>
+        <a href="https://katiebug32.github.io/Medicine-Cabinet/" class="link button ">Check out the site</a>
+        <a href="https://github.com/theAndes/Medicine-Cabinet" class="link button ">Check out the code</a>
       </div>
     </div>
 
@@ -223,9 +273,9 @@
     <div class="row" id="contact">
       <div class="medium-6 columns">
         <h3>Contact Me</h3>
-        <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh
-          porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse
-          dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quas, harum distinctio deserunt laudantium
+          ea eveniet, aperiam perferendis, facere recusandae praesentium! Aspernatur, voluptatibus esse minima adipisci
+          vel dicta at ipsa. </p>
         <ul class="menu">
           <li><a href="#top">Andrew Esquivel</a></li>
         </ul>
