--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html class="no-js" lang="en">
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135080781-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-135080781-1');
+    </script>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Andrew Esquivel || UT AUSTIN CODING</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="HTML,CSS,API,AJAX,JavaScript,Firebase,Full Stack, JQuery, Austin, veteran, NAVY">
+    <meta name="description"
+        content="Andrew is a Navy Veteran, and has worked with Samsung for over 8 years. Currently @ UT Austin. https://www.linkedin.com/in/andrewesquivel/">
+
+
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Andrew Esquivel || Welcome</title>
   <link href='https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet'
     type='text/css'>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
