--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <form data-abide method="POST" action="https://formspree.io/age.esquivel@gmail.com">
 
           <label>Name
-            <input type="text" placeholder="Name" required pattern="[a-zA-Z]+">
+            <input type="text" placeholder="Name" required>
           </label>
           <label>Email
             <input placeholder="youremail@email.com" type="email" name="email" required>
