--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
           </div>
           <div class="flip-card-inner-back">
             <h3 class="flip-card-inner-back-title">Where's my train?</h3>
-            <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-              doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
+            <p class="flip-card-inner-back-text">NoSQL Google Firebase Realtime Database</p>
           </div>
         </div>
       </div>
@@ -239,8 +238,7 @@
           </div>
           <div class="flip-card-inner-back">
             <h3 class="flip-card-inner-back-title">Answer the questions</h3>
-            <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-              doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
+            <p class="flip-card-inner-back-text">Javascript, Timers, Arrays, and Objects</p>
           </div>
         </div>
       </div>
@@ -257,8 +255,7 @@
           </div>
           <div class="flip-card-inner-back">
             <h3 class="flip-card-inner-back-title">PIKA</h3>
-            <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-              doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
+            <p class="flip-card-inner-back-text">Select you player and opponent and battle with JQuery.</p>
           </div>
         </div>
       </div>
@@ -275,8 +272,7 @@
           </div>
           <div class="flip-card-inner-back">
             <h3 class="flip-card-inner-back-title">Meds</h3>
-            <p class="flip-card-inner-back-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-              doloremque accusantium, repellendus ex debitis molestias, recusandae dignissimos delectus.</p>
+            <p class="flip-card-inner-back-text">A NoSQL Google Firebase Realtime Database project.</p>
           </div>
         </div>
       </div>
