--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <form data-abide method="POST" action="https://formspree.io/age.esquivel@gmail.com">
 
           <label>Name
-            <input type="text" placeholder="Name" required>
+            <input type="text" placeholder="Name" name="name"required>
           </label>
           <label>Email
             <input placeholder="youremail@email.com" type="email" name="email" required>
